[gd_scene load_steps=26 format=3 uid="uid://d1snlsvv08b63"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_qotbd"]
[ext_resource type="Texture2D" uid="uid://b8t2pjss27xw6" path="res://assets/sprite-sheets/player-sheet.png" id="2_xuf5t"]
[ext_resource type="AudioStream" uid="uid://budjratdgoe1x" path="res://assets/sounds/jump.mp3" id="3_qoay4"]
[ext_resource type="AudioStream" uid="uid://cf7og5yehvnnp" path="res://assets/sounds/gameover.wav" id="4_cssfr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8htqd"]
size = Vector2(60, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_uowr0"]
atlas = ExtResource("2_xuf5t")
region = Rect2(0, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5ynm"]
atlas = ExtResource("2_xuf5t")
region = Rect2(12, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq0hh"]
atlas = ExtResource("2_xuf5t")
region = Rect2(24, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j30n"]
atlas = ExtResource("2_xuf5t")
region = Rect2(36, 0, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwglq"]
atlas = ExtResource("2_xuf5t")
region = Rect2(12, 18, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww8h2"]
atlas = ExtResource("2_xuf5t")
region = Rect2(24, 18, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxvbv"]
atlas = ExtResource("2_xuf5t")
region = Rect2(36, 18, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_kivv4"]
atlas = ExtResource("2_xuf5t")
region = Rect2(0, 18, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2427"]
atlas = ExtResource("2_xuf5t")
region = Rect2(12, 36, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo2sn"]
atlas = ExtResource("2_xuf5t")
region = Rect2(0, 36, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyrwe"]
atlas = ExtResource("2_xuf5t")
region = Rect2(36, 36, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fwpv"]
atlas = ExtResource("2_xuf5t")
region = Rect2(24, 36, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_q44e3"]
atlas = ExtResource("2_xuf5t")
region = Rect2(0, 54, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_6juby"]
atlas = ExtResource("2_xuf5t")
region = Rect2(12, 54, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fumx"]
atlas = ExtResource("2_xuf5t")
region = Rect2(24, 54, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2epu"]
atlas = ExtResource("2_xuf5t")
region = Rect2(36, 54, 12, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_trm3v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uowr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5ynm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq0hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j30n")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwglq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww8h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxvbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kivv4")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2427")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo2sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyrwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fwpv")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q44e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6juby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fumx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2epu")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g31xd"]
radius = 40.0
height = 160.0

[sub_resource type="Animation" id="Animation_h6uyg"]
resource_name = "walkindoow"
length = 3.54
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.54),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.4, 0.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_abof0"]
_data = {
"walkindoow": SubResource("Animation_h6uyg")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_qotbd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_8htqd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_trm3v")
animation = &"walk_up"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(74, 38)
zoom = Vector2(0.6, 0.6)
limit_left = 0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qoay4")
bus = &"Sfx"

[node name="GameOverNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cssfr")

[node name="TouchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
shape = SubResource("CapsuleShape2D_g31xd")

[node name="WalkInDoorAnims" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_abof0")
}

[connection signal="finished" from="GameOverNoise" to="." method="_on_game_over_noise_finished"]
